Cleaned up some provisioning issues and added duo repo to the ansible role for AMIs that may not have that repo pre-installed.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,15 +1,17 @@
-
 ---
 - hosts: localhost
   connection: local
   gather_facts: true
   become: yes
-  include_vars:
-    file: /tmp/local_config.json
-  roles:
-    - base
-    - duo
+
   tasks:
+  - include_vars:
+      file: /tmp/local_config.json
+  - include_role:
+      name: bastion
+  - include_role:
+      name: duo
+    when: "duo_enabled"
   - include_role:
       name: dj-wasabi.ossec-agent
     when: "ossec_enabled"
